[package]
name = "agisostack"
version = "0.1.0"
edition = "2021"
description = "AgIsoStack is the Free ISO11783 & J1939 CAN Stack"
keywords = ["isobus", "iso11783", "j1939", "can", "canbus"]
categories = ["agriculture", "embedded", "no-std"]
license = "MIT"
build = "build.rs"

homepage = "https://github.com/Open-Agriculture/AgIsoStack-rs"
documentation = "https://docs.rs/AgIsoStack"
repository = "https://github.com/Open-Agriculture/AgIsoStack-rs"
readme = "README.md"

[dependencies]
nb = "1.0.0"
log = "0.4.16"
fastrand = { version = "2.0.0", default-features = false }
bitflags = "1.3.2"
heapless = "0.7.16"
lazy_static = "1.4.0"

# Optional dependencies
pcan-basic = { version = "1.0.2", optional = true }
socketcan = { version = "1.7.0", optional = true }
embedded-can = { version = "0.4.1", optional = true }

[features]
# default = ["mock_can_driver", "mock_time_driver", "log_can"]

# Target feature sets
win32 = ["std", "peak_can_driver", "std_time_driver", "log_can"]
linux = ["std", "socket_can_driver", "std_time_driver", "log_can"]

# Marker features
std = []
embedded_can = []

# Driver options
_can_driver = []
mock_can_driver = ["_can_driver"]
peak_can_driver = ["_can_driver", "pcan-basic"]
socket_can_driver = ["_can_driver", "socketcan"]

_time_driver = []
mock_time_driver = ["_time_driver"]
std_time_driver = ["_time_driver"]

# CAN bus logging options
log_can = ["log_can_read", "log_can_write"]
log_all_can = ["log_all_can_read", "log_can_write"]
log_can_write = []
log_can_read = []
log_all_can_read = []

[dev-dependencies]
env_logger = "0.10.0"

[dev-dependencies.agisostack]
version = "0.1.0"
path = "./"
default-features = false
features = ["std", "mock_can_driver", "std_time_driver", "log_can"]